--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -64,9 +64,7 @@
 
 :host(.form-field--error-space-reserve) {
   // TODO: Fix hack
-  --form-field-error-min-height: calc(
-    var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs) * 1.25
-  );
+  --form-field-error-min-height: calc(var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs));
   --form-field-error-padding-block-start: var(--sbb-border-width-1x);
 }
 
@@ -128,6 +126,7 @@
   border: none;
   outline: none;
   padding: 0;
+  color: var(--form-field-text-color);
   background-color: var(--form-field-background-color);
 }
 
