chore: add story & minor fixes for button variant in sbb-link

--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -45,6 +45,12 @@
 
 button.sbb-link {
   @include buttonReset;
+
+  cursor: pointer;
+}
+
+button.sbb-link:disabled {
+  cursor: default;
 }
 
 .sbb-link--negative {
