--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -64,7 +64,9 @@
 
 :host(.form-field--error-space-reserve) {
   // TODO: Fix hack
-  --form-field-error-min-height: calc(var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs));
+  --form-field-error-min-height: calc(
+    var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs)
+  );
   --form-field-error-padding-block-start: var(--sbb-border-width-1x);
 }
 
