--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -6,6 +6,20 @@
   --some-color-var: var(--color-black-default);
 }
 
-.some-class {
-  color: var(--some-color-var);
+.header-action__icon {
+  margin-left: var(--sbb-spacing-fixed-5x);
+  margin-right: var(--sbb-spacing-fixed-2x);
+}
+
+.header-action__label {
+  margin-right: var(--sbb-spacing-fixed-5x);
+}
+
+.header-action__link {
+  display: flex;
+  align-content: center;
+}
+
+.header-action__button {
+  @include button;
 }
