refactor: 1238 sbb-link-list refactor
- adjust all usages of sbb-link-list and sbb-title
- add pointer-events: none to sbb-link styles for disable state
- add one more test case to sbb-link-list (one with heading/ one without)

--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -24,6 +24,10 @@
   word-break: break-word;
   fill: currentcolor;
 
+  &[tabindex='-1'] {
+    pointer-events: none;
+  }
+
   &:focus-visible {
     @include focusOutline;
   }
