--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -5,21 +5,14 @@
 :host {
   display: block;
 
-  --header-padding: var(--sbb-spacing-fixed-5x);
   --header-height: #{px-to-rem-build(56)}; // fixme
   --logo-width: #{px-to-rem-build(151.33)}; // fixme
   --logo-height: #{px-to-rem-build(16)}; // fixme
 
-  @include mq($from: small) {
-    --header-padding: #{px-to-rem-build(96)}; // fixme
-  }
   @include mq($from: medium) {
     --header-height: #{px-to-rem-build(96)}; // fixme
     --logo-width: #{px-to-rem-build(189.17)}; // fixme
     --logo-height: #{px-to-rem-build(20)}; // fixme
-  }
-  @include mq($from: large) {
-    --header-padding: var(--sbb-spacing-fixed-14x);
   }
 }
 
@@ -29,7 +22,7 @@
   left: 0;
   top: 0;
   width: 100vw;
-  padding: 0 var(--header-padding);
+  padding: 0 var(--sbb-page-base-offset-responsive);
   background: var(--sbb-color-white-default);
 }
 
