--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -9,6 +9,10 @@
   border-radius: var(--sbb-border-radius-4x);
   padding-inline: var(--sbb-spacing-responsive-xxs-small);
   overflow: hidden;
+  transition-property: box-shadow, -moz-box-shadow, -webkit-box-shadow;
+  transition-duration: var(--sbb-animation-duration-4x);
+  transition-timing-function: var(--sbb-animation-easing);
+
   @include mq($from: medium) {
     padding-inline: var(--sbb-spacing-responsive-xxs-medium);
   }
@@ -20,6 +24,7 @@
 
 :host([size='s']) {
   padding-block: var(--sbb-spacing-responsive-xxxs-small);
+
   @include mq($from: medium) {
     padding-block: var(--sbb-spacing-responsive-xxxs-medium);
   }
@@ -35,6 +40,7 @@
 
 :host([size='xl']) {
   padding-block: var(--sbb-spacing-responsive-xxs-small);
+
   @include mq($from: medium) {
     padding-block: var(--sbb-spacing-responsive-xxs-medium);
   }
@@ -48,7 +54,27 @@
 
 :host([size='xxl']) {
   padding-block: var(--sbb-spacing-responsive-s-small);
+
   @include mq($from: medium) {
     padding-block: var(--sbb-spacing-responsive-s-medium);
   }
+}
+
+.card__content {
+  display: block;
+  transition: transform var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
+}
+
+:host(:hover) {
+  cursor: pointer;
+
+  .card__content {
+    transform: translateY(-2px);
+  }
+}
+
+:host(:active) {
+  box-shadow: inset 0 0 0 var(--sbb-border-width-2x) var(--sbb-color-smoke-default);
+  box-shadow: inset 0 0 0 var(--sbb-border-width-2x) var(--sbb-color-smoke-default);
+  box-shadow: inset 0 0 0 var(--sbb-border-width-2x) var(--sbb-color-smoke-default);
 }
