--- a/src/components/sbb-tab-title/sbb-tab-title.scss
+++ b/src/components/sbb-tab-title/sbb-tab-title.scss
@@ -5,6 +5,7 @@
 :host {
   display: inline-block;
   max-width: 100%;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .sbb-tab-title {
@@ -15,9 +16,11 @@
   align-items: center;
   padding-block: var(--sbb-spacing-fixed-2x);
   padding-inline: var(--sbb-spacing-fixed-5x);
-  -webkit-tap-highlight-color: transparent;
   user-select: none;
   cursor: pointer;
+  transition-duration: var(--sbb-animation-duration-4x);
+  transition-timing-function: var(--sbb-animation-easing);
+  transition-property: color;
 
   &::before {
     position: absolute;
@@ -68,6 +71,13 @@
       background-color: var(--sbb-color-milk-default);
     }
   }
+
+  .sbb-tab-title:not(.active):active {
+    &::before {
+      border-color: var(--sbb-color-black-default);
+      background-color: var(--sbb-color-white-default);
+    }
+  }
 }
 
 .sbb-tab-title.active {
@@ -113,12 +123,5 @@
     &::before {
       @include focusOutline;
     }
-  }
-}
-
-.sbb-tab-title:not(.active):active {
-  &::before {
-    border-color: var(--sbb-color-black-default);
-    background-color: var(--sbb-color-white-default);
   }
 }
