fix: form error styles

--- a/src/components/sbb-form-error/sbb-form-error.scss
+++ b/src/components/sbb-form-error/sbb-form-error.scss
@@ -6,32 +6,34 @@
 :host {
   --form-error-height: calc(var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs));
 
-  display: flex;
-  align-items: flex-start;
-  color: var(--sbb-color-red125-default);
-  @include text-xs--regular;
-
-  // fix for "display: flex" taking unnecessary space below the element
-  @include zeroWidthSpace;
-
-  // error height = text line-height
-  min-height: var(--form-error-height);
-
-  // fix for line-height taking more than reserved space
-  line-height: 1;
-
+  // Overrides sbb icon
   --sbb-icon-svg-width: var(--sbb-size-icon-form-error);
   --sbb-icon-svg-height: var(--sbb-size-icon-form-error);
+
+  @include text-xs--regular;
+
+  // Fix for "display: flex" taking unnecessary space below the element
+  @include zeroWidthSpace;
+
+  display: inline-flex;
+  align-items: flex-start;
+  color: var(--sbb-color-red125-default);
+
+  // Error height = text line-height
+  min-height: var(--form-error-height);
+
+  // Fix for line-height taking more than reserved space
+  line-height: 1;
 }
 
 .form-error__icon {
   height: var(--sbb-size-icon-form-error);
-  padding-inline-end: var(--sbb-spacing-fixed-1x);
-  padding-block-start: calc((var(--form-error-height) - var(--sbb-size-icon-form-error)) / 2);
+  margin-inline-end: var(--sbb-spacing-fixed-1x);
+  margin-block-start: calc((var(--form-error-height) - var(--sbb-size-icon-form-error)) / 2);
 }
 
 .input-label-error {
-  // fix for line-height taking more than reserved space
+  // Fix for line-height taking more than reserved space
   line-height: var(--sbb-typo-line-height-body-text);
   vertical-align: text-top;
 }
