feat: added dedicated icons

--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -71,6 +71,7 @@
   color: var(--sbb-color-black-default);
   @include text-xs--bold;
 
+  line-height: 1;
   margin-right: var(--sbb-spacing-fixed-5x);
 }
 
@@ -84,4 +85,6 @@
 
 .header-action__button {
   @include button;
+
+  display: flex;
 }
