--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -15,6 +15,15 @@
   color: inherit;
 }
 
+:host([variant='block']) {
+  display: flex;
+
+  .sbb-link--icon-placement-end ::slotted(*),
+  .sbb-link--icon-placement-end sbb-icon {
+    order: 2;
+  }
+}
+
 .sbb-link {
   display: flex;
   align-items: center;
@@ -89,12 +98,4 @@ button.sbb-link:disabled {
   .sbb-link:hover:not(:disabled) {
     color: var(--text-color-hover-focus);
   }
-}
-
-.sbb-link--icon-placement-end ::slotted(*:last-of-type) {
-  order: 2;
-}
-
-.sbb-link.sbb-link--icon-flip ::slotted(*:last-of-type) {
-  transform: scaleX(-1);
 }
