--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -15,6 +15,10 @@
   color: inherit;
 }
 
+:host([variant='block']) {
+  display: flex;
+}
+
 .sbb-link {
   display: flex;
   align-items: center;
@@ -91,10 +95,7 @@ button.sbb-link:disabled {
   }
 }
 
-.sbb-link--icon-placement-end ::slotted(*:last-of-type) {
+.sbb-link--icon-placement-end ::slotted(*),
+.sbb-link--icon-placement-end sbb-icon {
   order: 2;
-}
-
-.sbb-link.sbb-link--icon-flip ::slotted(*:last-of-type) {
-  transform: scaleX(-1);
 }
