--- a/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
+++ b/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
@@ -29,6 +29,7 @@
   position: relative;
   box-sizing: border-box;
   display: flex;
+  justify-content: space-between;
   flex-wrap: nowrap;
   color: var(--sbb-color-default);
   width: 100%;
@@ -50,6 +51,10 @@
   @include ifForcedColors {
     background-color: CanvasText;
   }
+}
+
+.pearl-chain--progress::before {
+  color: var(--color-past);
 }
 
 .pearl-chain::before {
@@ -99,10 +104,24 @@
   flex-grow: 0;
   position: relative;
   height: var(--border-width);
+  border-right: var(--spacing-small) solid var(--color-white);
+  background-color: currentcolor;
 
   @include ifForcedColors {
     color: CanvasText;
   }
+}
+
+.pearl-chain__leg:last-of-type {
+  border: none;
+}
+
+.pearl-chain__leg--past {
+  color: var(--color-past);
+}
+
+.pearl-chain__leg--progress::before {
+  color: var(--color-past);
 }
 
 // dot on leg
@@ -131,7 +150,6 @@
   content: '';
   position: absolute;
   top: 0;
-  right: var(--spacing-small);
   bottom: 0;
   left: 0;
   background-color: currentcolor;
@@ -149,6 +167,11 @@
 
 .pearl-chain__leg:last-of-type::after {
   right: calc(-1 * var(--border-width));
+}
+
+.pearl-chain__leg--progress::after {
+  background-color: var(--color-past);
+  width: var(--leg-status);
 }
 
 .pearl-chain__leg--cancellation {
@@ -177,13 +200,14 @@
   );
   background-repeat: repeat-x;
   background-size: calc(2 * var(--spacing-small)) var(--border-width);
+  right: var(--border-width);
 }
 
 .pearl-chain__leg--cancellation::after,
 .pearl-chain--past .pearl-chain__leg--cancellation::after {
   @include ifForcedColors {
     background: none;
-    border-top: #{px-to-rem-build(1)} dashed currentColor;
+    border-top: #{px-to-rem-build(1)} dashed currentcolor;
     transform: translateY(#{px-to-rem-build(1)});
   }
 }
@@ -209,15 +233,6 @@
   @include ifForcedColors {
     background-color: ActiveText;
   }
-}
-
-.pearl-chain__leg--past {
-  position: absolute;
-  left: 0;
-  background-color: var(--color-past);
-  width: var(--status-position);
-  height: var(--border-width);
-  z-index: 1;
 }
 
 @keyframes pulse {
