--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -118,10 +118,9 @@
 
   display: flex;
   max-width: 100%;
-  position: relative;
 
-  // Moves label down to meet requirements
-  inset-block-end: calc(0.5 * var(--form-field-label-to-input-gap));
+  // Moves label down and input up to meet positioning requirements
+  margin-bottom: var(--form-field-label-to-input-gap);
   color: var(--form-field-label-color);
   user-select: none;
   pointer-events: none;
@@ -130,13 +129,6 @@
 ::slotted(*[slot='label']),
 slot[name='label'] > span {
   @include ellipsis;
-}
-
-.form-field__input {
-  position: relative;
-
-  // Moves input up to meet requirements
-  inset-block-start: calc(0.5 * var(--form-field-label-to-input-gap));
 }
 
 // Input
