refactor: sbb-image-1245
- code review

--- a/src/components/sbb-image/sbb-image.scss
+++ b/src/components/sbb-image/sbb-image.scss
@@ -88,7 +88,7 @@
 }
 
 .image__caption {
-  margin-top: var(--sbb-spacing-fixed-4x);
+  margin-block-start: var(--sbb-spacing-fixed-4x);
   @include text-xs--regular;
 }
 
